# backend/src/api/assets.js
@@ -74,4 +74,29 @@ router.post('/create-assets', async(req, res) => {
     });
 });
 
+router.post('/transfer-token', async(req, res) => {
+    const { address, assetsName, quantity } = req.body;
+
+    var payload = {
+        "method" : "sendasset",
+        "params" : [address, assetsName, Number(quantity)],
+        "id" : 1,
+        "chain_name" : "dexChain"
+    };
+    
+    const encodedToken = await getDecodeAuth();
+    const result = await axios(`${base_url}`, {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+            'Authorization': 'Basic '+ encodedToken
+        },
+        data: payload,
+    }).then((result) => {
+        return res.status(200).send({ status: "success", message: "Token Transfer Successfully 😀", data: result.data.result })
+    }).catch((err) => {
+        return err.response;
+    });
+});
+
 module.exports = router;
